# agente-whatsapp

./: .dockerignore  .env.example  Dockerfile  HANDOFF.md  PLANEJAMENTO.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: DEPLOY.md  PENDENCIAS.md  PLANO_IMPLEMENTACAO.md  QUESTIONARIO_TRIVUS.md  SPEC.md  STATUS.md
docs/plans/: 00-INDEX.md  01-dominio.md  02-agenda.md  03-fake-crm-tenants.md  04-use-cases-atendimento.md  05-persistencia-conversa.md  06-canal-zapi.md  07-cerebro-llm.md  08-adapter-trivus.md  09-scheduler.md  10-rag.md  11-producao.md
docs/trivus/: openapi.json
migrations/: env.py
migrations/versions/: 71d8dea8337f_initial_schema.py  9a7da5ae1844_initial_schema.py  b29fb6f1a3e9_initial_schema.py
src/agente/: bootstrap.py  ingest.py  worker.py
tests/adapters/: test_anthropic_llm.py  test_channel_decorators.py  test_channel_factory.py  test_crm_factory.py  test_embedders.py  test_fake_crm.py  test_llm_factory.py  test_openai_llm.py  test_zapi_parser.py  test_zapi_sender.py
tests/api/: conftest.py  test_bootstrap.py  test_webhook.py
tests/application/: conftest.py  test_context_builder.py  test_debounce.py  test_escalate.py  test_get_availability.py  test_identify_contact.py  test_job_handlers.py  test_knowledge_tool.py  test_pipeline.py  test_process_message.py  test_prompt.py  test_qualify_lead.py  test_reschedule_cancel.py  test_schedule_appointment.py  test_tools.py
tests/config/: test_tenant_loader.py
tests/domain/: conftest.py  test_architecture.py  test_conversation.py  test_lead.py  (+4 more)
(+80 files in other folders)
